update session now works from UI, bugs fixed